[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/flag_raise.gd" id="1_script"]

[node name="FlagRaise" type="Node"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.15, 0.3, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "FLAG RAISE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="CountdownLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 10.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="FlagCenter" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FlagArea" type="Control" parent="VBoxContainer/FlagCenter"]
layout_mode = 2
custom_minimum_size = Vector2(80, 300)

[node name="FlagPole" type="ColorRect" parent="VBoxContainer/FlagCenter/FlagArea"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_right = 16.0
offset_bottom = 300.0
color = Color(0.6, 0.6, 0.6, 1)

[node name="FlagRect" type="ColorRect" parent="VBoxContainer/FlagCenter/FlagArea"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 270.0
offset_right = 66.0
offset_bottom = 300.0
color = Color(1, 0, 0.2, 1)

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="BeatBarCenter" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BeatBar" type="ColorRect" parent="VBoxContainer/BeatBarCenter"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(300, 30)
color = Color(0.15, 0.15, 0.25, 1)

[node name="BeatZone" type="ColorRect" parent="VBoxContainer/BeatBarCenter/BeatBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 120.0
offset_right = 180.0
offset_bottom = 30.0
color = Color(0.2, 0.8, 0.2, 0.6)

[node name="BeatIndicator" type="ColorRect" parent="VBoxContainer/BeatBarCenter/BeatBar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 30.0
color = Color(1, 1, 1, 1)

[node name="Spacer5" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Flag: 0%"
horizontal_alignment = 1
vertical_alignment = 1
